fix: support community photo posts
